make default_metric required with multiple metrics
- also makes the value-fetcher return the value of the delegated
field type (default_metric)